--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<tr>
+		<td>	
+		<th>Roll number</th>
+	</td>
+		</tr>
+		<tr>
+			<td>
+			<th>Name</th>
+	</td>
+		</tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
