--- a/main.html
+++ b/main.html
@@ -15,7 +15,14 @@
 	    <th>Name</th>
 
 		</tr>
-		
+		<tr>
+			<td>88</td>
+		<td>jyoti</td>
+		</tr>
+		<tr>
+			<td>89</td>
+			<td>kalu</td>
+		</tr>
 	</table>
     <script type="text/javascript" src="./script.js">
 </script>
