--- a/main.html
+++ b/main.html
@@ -9,21 +9,23 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<table>
-		<table border 1px>
+		<thead>
 		<tr>
 			
 		<th>Roll number</th>
 	    <th>Name</th>
-
 		</tr>
+		</thade>
+			<tbody>
 		<tr>
-			<td>88</td>
+			<td>1</td>
 		<td>jyoti</td>
 		</tr>
-		<tr>
-			<td>89</td>
+				<tr>
+			<td>2</td>
 			<td>kalu</td>
-		</tr>
+			</tbody>
+	</tr>
 	</table>
     <script type="text/javascript" src="./script.js">
 </script>
